metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/ApexLogger__c.object-meta.xml
<CustomObject>
    <description>Custom object to log apex exceptions for tracking and troubleshooting</description>
    <label>Apex Logger</label>
    <nameField>
        <displayFormat>Log-{000}</displayFormat>
        <label>ApexLogger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>