metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>LAMBDA-64039 exception message generated during exception logging</description>
    <inlineHelpText>Error message generated during exception</inlineHelpText>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>