metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/fields/Exception_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type_Name__c</fullName>
    <description>LAMBDA-64039 name of the exception generated</description>
    <inlineHelpText>Name of the exception generated</inlineHelpText>
    <label>Exception Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>