metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-64039 Get the Id of the logged in user that caused the exception</description>
    <inlineHelpText>Id of the logged in user</inlineHelpText>
    <label>Logged In User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apex_Loggers</relationshipName>
    <type>Lookup</type>
</CustomField>