metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>LAMBDA-64039 Id of the record that generated the exception</description>
    <inlineHelpText>Id of the record that generated the exception (optional)</inlineHelpText>
    <label>RecordId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>