metadata/sf-prod/force-app/main/default/objects/ApexLogger__c/fields/Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace_String__c</fullName>
    <description>LAMBDA-64039 Error stack trace string generated through exception</description>
    <inlineHelpText>Stack trace string generated during exception</inlineHelpText>
    <label>Stack Trace String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>